--- a/web-components/src/components/avatar/scss/settings.scss
+++ b/web-components/src/components/avatar/scss/settings.scss
@@ -1,4 +1,3 @@
-
 $avatar--inactive__opacity: var(--avatar-inactive-opacity);
 
 $avatar__font-size: rem-calc(14);
@@ -6,200 +5,55 @@ $avatar__size: rem-calc(40);
 $avatar__font-factor: 0.35;
 $avatar__line-height-factor: 0.5;
 
-$avatar-sizes: (
-  xsmall,
-  $icon-dnd_8,
-  $icon-pto_8,
-  $icon-handset_8,
-  $icon-camera_12,
-  $icon-share-screen_8,
-  18
-),
-  (
-  small,
-  $icon-dnd_14,
-  $icon-pto_14,
-  $icon-handset_14,
-  $icon-camera_16,
-  $icon-share-screen_14,
-  28
-),
-  (
-  medium,
-  $icon-dnd_20,
-  $icon-pto_20,
-  $icon-handset_20,
-  $icon-camera_20,
-  $icon-share-screen_20,
-  40
-),
-  (
-  large,
-  $icon-dnd_28,
-  $icon-pto_28,
-  $icon-handset_28,
-  $icon-camera_26,
-  $icon-share-screen_28,
-  52
-),
-  (
-  xlarge,
-  $icon-dnd_40,
-  $icon-pto_32,
-  $icon-handset_40,
-  $icon-camera_32,
-  $icon-share-screen_36,
-  84
-),
-  (
-  18,
-  $icon-dnd_8,
-  $icon-pto_8,
-  $icon-handset_8,
-  $icon-camera_12,
-  $icon-share-screen_8
-),
-  (
-  24,
-  $icon-dnd_12,
-  $icon-pto_12,
-  $icon-handset_12,
-  $icon-camera_12,
-  $icon-share-screen_12
-),
-  (
-  28,
-  $icon-dnd_14,
-  $icon-pto_14,
-  $icon-handset_14,
-  $icon-camera_16,
-  $icon-share-screen_14
-),
-  (
-  32,
-  $icon-dnd_16,
-  $icon-pto_16,
-  $icon-handset_16,
-  $icon-camera_16,
-  $icon-share-screen_16
-),
-  (
-  36,
-  $icon-dnd_18,
-  $icon-pto_18,
-  $icon-handset_18,
-  $icon-camera_18,
-  $icon-share-screen_18
-),
-  (
-  40,
-  $icon-dnd_20,
-  $icon-pto_20,
-  $icon-handset_20,
-  $icon-camera_20,
-  $icon-share-screen_20
-),
-  (
-  44,
-  $icon-dnd_24,
-  $icon-pto_24,
-  $icon-handset_24,
-  $icon-camera_24,
-  $icon-share-screen_24
-),
-  (
-  48,
-  $icon-dnd_24,
-  $icon-pto_24,
-  $icon-handset_24,
-  $icon-camera_24,
-  $icon-share-screen_24
-),
-  (
-  52,
-  $icon-dnd_28,
-  $icon-pto_28,
-  $icon-handset_28,
-  $icon-camera_26,
-  $icon-share-screen_28
-),
-  (
-  56,
-  $icon-dnd_28,
-  $icon-pto_28,
-  $icon-handset_28,
-  $icon-camera_26,
-  $icon-share-screen_28
-),
-  (
-  64,
-  $icon-dnd_28,
-  $icon-pto_28,
-  $icon-handset_28,
-  $icon-camera_26,
-  $icon-share-screen_28
-),
-  (
-  72,
-  $icon-dnd_36,
-  $icon-pto_32,
-  $icon-handset_36,
-  $icon-camera_32,
-  $icon-share-screen_36
-),
-  (
-  80,
-  $icon-dnd_40,
-  $icon-pto_32,
-  $icon-handset_40,
-  $icon-camera_32,
-  $icon-share-screen_36
-),
-  (
-  84,
-  $icon-dnd_40,
-  $icon-pto_32,
-  $icon-handset_40,
-  $icon-camera_32,
-  $icon-share-screen_36
-),
-  (
-  88,
-  $icon-dnd_40,
-  $icon-pto_32,
-  $icon-handset_40,
-  $icon-camera_32,
-  $icon-share-screen_36
-),
-  (
-  124,
-  $icon-dnd_40,
-  $icon-pto_32,
-  $icon-handset_40,
-  $icon-camera_32,
-  $icon-share-screen_36
-);
+$avatar-sizes: (xsmall, $icon-dnd_8, $icon-pto_8, $icon-handset_8, $icon-camera_12, $icon-share-screen_8, 18),
+  (small, $icon-dnd_14, $icon-pto_14, $icon-handset_14, $icon-camera_16, $icon-share-screen_14, 28),
+  (medium, $icon-dnd_20, $icon-pto_20, $icon-handset_20, $icon-camera_20, $icon-share-screen_20, 40),
+  (large, $icon-dnd_28, $icon-pto_28, $icon-handset_28, $icon-camera_26, $icon-share-screen_28, 52),
+  (xlarge, $icon-dnd_40, $icon-pto_32, $icon-handset_40, $icon-camera_32, $icon-share-screen_36, 84),
+  (18, $icon-dnd_8, $icon-pto_8, $icon-handset_8, $icon-camera_12, $icon-share-screen_8),
+  (24, $icon-dnd_12, $icon-pto_12, $icon-handset_12, $icon-camera_12, $icon-share-screen_12),
+  (28, $icon-dnd_14, $icon-pto_14, $icon-handset_14, $icon-camera_16, $icon-share-screen_14),
+  (32, $icon-dnd_16, $icon-pto_16, $icon-handset_16, $icon-camera_16, $icon-share-screen_16),
+  (36, $icon-dnd_18, $icon-pto_18, $icon-handset_18, $icon-camera_18, $icon-share-screen_18),
+  (40, $icon-dnd_20, $icon-pto_20, $icon-handset_20, $icon-camera_20, $icon-share-screen_20),
+  (44, $icon-dnd_24, $icon-pto_24, $icon-handset_24, $icon-camera_24, $icon-share-screen_24),
+  (48, $icon-dnd_24, $icon-pto_24, $icon-handset_24, $icon-camera_24, $icon-share-screen_24),
+  (52, $icon-dnd_28, $icon-pto_28, $icon-handset_28, $icon-camera_26, $icon-share-screen_28),
+  (56, $icon-dnd_28, $icon-pto_28, $icon-handset_28, $icon-camera_26, $icon-share-screen_28),
+  (64, $icon-dnd_28, $icon-pto_28, $icon-handset_28, $icon-camera_26, $icon-share-screen_28),
+  (72, $icon-dnd_36, $icon-pto_32, $icon-handset_36, $icon-camera_32, $icon-share-screen_36),
+  (80, $icon-dnd_40, $icon-pto_32, $icon-handset_40, $icon-camera_32, $icon-share-screen_36),
+  (84, $icon-dnd_40, $icon-pto_32, $icon-handset_40, $icon-camera_32, $icon-share-screen_36),
+  (88, $icon-dnd_40, $icon-pto_32, $icon-handset_40, $icon-camera_32, $icon-share-screen_36),
+  (124, $icon-dnd_40, $icon-pto_32, $icon-handset_40, $icon-camera_32, $icon-share-screen_36);
 
-$avatar--active__shadow: inset 0 0 0 rem-calc(1) var(--avatar-presence-active, $md-green-50),
+$avatar--active__shadow:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-active, $md-green-50),
   inset 0 0 0 rem-calc(2) $white-24;
-$avatar--active__shadow--dark: inset 0 0 0 rem-calc(1) var(--avatar-presence-active, $md-green-50),
+$avatar--active__shadow--dark:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-active, $md-green-50),
   inset 0 0 0 rem-calc(2) $black-24;
-$avatar--engaged__shadow: inset 0 0 0 rem-calc(1) var(--avatar-presence-engaged, $md-yellow-40),
+$avatar--engaged__shadow:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-engaged, $md-yellow-40),
   inset 0 0 0 rem-calc(2) $white-24;
-$avatar--engaged__shadow--dark: inset 0 0 0 rem-calc(1) var(--avatar-presence-engaged, $md-yellow-40),
+$avatar--engaged__shadow--dark:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-engaged, $md-yellow-40),
   inset 0 0 0 rem-calc(2) $black-24;
-$avatar--idle__shadow: inset 0 0 0 rem-calc(1) var(--avatar-presence-inactive, $md-gray-30),
+$avatar--idle__shadow:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-inactive, $md-gray-30),
   inset 0 0 0 rem-calc(2) $white-24;
-$avatar--idle__shadow--dark: inset 0 0 0 rem-calc(1) var(--avatar-presence-inactive, $md-gray-30),
+$avatar--idle__shadow--dark:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-inactive, $md-gray-30),
   inset 0 0 0 rem-calc(2) $black-24;
-$avatar--rona__shadow: inset 0 0 0 rem-calc(1) var(--avatar-presence-rona, $md-red-60),
+$avatar--rona__shadow:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-rona, $md-red-60),
   inset 0 0 0 rem-calc(2) $white-24;
-$avatar--rona__shadow--dark: inset 0 0 0 rem-calc(1) var(--avatar-presence-rona, $md-red-60),
+$avatar--rona__shadow--dark:
+  inset 0 0 0 rem-calc(1) var(--avatar-presence-rona, $md-red-60),
   inset 0 0 0 rem-calc(2) $black-24;
-  
 
-$avatar-letter__color: var(--avatar-letter-text-color, $lm-avatar-letter-text-color-light);
-$avatar-letter__background: var(--avatar-letter-bg-color, $lm-avatar-letter-bg-color-light);
+$avatar-letter__color: var(--avatar-letter-text-color);
+$avatar-letter__background: var(--avatar-letter-bg-color);
 
 $avatar-icon__color: var(--avatar-icon-icon-color, $black-80);
 $avatar-icon__background: $gray-5-88;
